# snapchat-memory-fetcher

./: .gitignore  LICENSE  Makefile  README.md  config.py  log.py  main.py  pyproject.toml  requirements.txt
downloads/: .gitignore
snapchat_memory_fetcher/: __init__.py  decoder.py  fetcher.py  parse.py  writer.py
