[tool.poetry]
name = "Snapchat Memory Fetcher"
version = "0.1.0"
description = "Extract Snapchat videos & stories from your user account."
authors = ["Todd <toddbirchard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
simplejson = "^3.17.2"
loguru = "^0.5.3"
requests = "^2.25.1"
aiohttp = "^3.7.4"
aiofile = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
mypy = "*"
black = "^20.8b1"
isort = "*"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/snapchat-memory-fetcher/issues"
