[tool.poetry]
name = "Snapchat Memory Fetcher"
version = "0.1.0"
description = "Extract Snapchat videos & stories from your user account."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = [
  "Snapchat",
  "Data Export",
  "Automation",
  "Async",
  "Concurrency"
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
asyncio = "^3.4.3"
simplejson = "^3.17.2"
loguru = "^0.5.3"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "*"
mock = "*"
mypy = "*"
black = "^20.8b1"
isort = "*"
flake8 = "^3.9.0"

[tool.poetry.scripts]
run = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/snapchat-memory-fetcher/issues"
